Deny / by default in httpd.conf

--- a/jobs/graphite-web/templates/config/httpd.conf.erb
+++ b/jobs/graphite-web/templates/config/httpd.conf.erb
@@ -33,6 +33,10 @@ ServerAdmin you@example.com
 
 <Directory />
     AllowOverride none
+    Require all denied
+</Directory>
+<Directory /var/vcap/packages/graphite-web>
+    AllowOverride none
     Require all granted
 </Directory>
 
