--- a/jobs/graphite-web/templates/config/local_settings.py.erb
+++ b/jobs/graphite-web/templates/config/local_settings.py.erb
@@ -10,7 +10,7 @@
 # install. This key is used for salting of hashes used in auth tokens,
 # CRSF middleware, cookie storage, etc. This should be set identically among
 # instances if used behind a load balancer.
-SECRET_KEY = 'SECRETKEYHERE' # propertyme
+SECRET_KEY = '<%= p('graphite-web.secret_key') %>'
 
 # In Django 1.5+ set this to the list of hosts your graphite instances is
 # accessible as. See:
@@ -20,7 +20,7 @@ SECRET_KEY = 'SECRETKEYHERE' # propertyme
 # Set your local timezone (Django's default is America/Chicago)
 # If your graphs appear to be offset by a couple hours then this probably
 # needs to be explicitly set to your local timezone.
-TIME_ZONE = 'Europe/London' # propertyme
+TIME_ZONE = '<%= p('graphite-web.time_zone') %>'
 
 # Override this to provide documentation specific to your Graphite deployment
 #DOCUMENTATION_URL = "http://graphite.readthedocs.org/"
