Add statsd storage schema

--- a/jobs/carbon/templates/config/storage-schemas.conf.erb
+++ b/jobs/carbon/templates/config/storage-schemas.conf.erb
@@ -17,6 +17,10 @@ retentions = <%= storage_schema['retentions'] %>
 pattern = ^carbon\.
 retentions = 60:90d
 
+[statsd]
+pattern = ^stats.*
+retentions = 10s:1d,1m:7d,10m:1y
+
 [default_1min_for_1day]
 pattern = .*
 retentions = 60s:1d
