Disable statsd legacyNamespace + set flush

--- a/jobs/statsd/templates/config/config.js.erb
+++ b/jobs/statsd/templates/config/config.js.erb
@@ -103,4 +103,8 @@ Optional Variables:
 , graphiteHost: "127.0.0.1"
 , port: <%= p('statsd.port') %>
 , backends: [ "./backends/graphite" ]
+, graphite: {
+    legacyNamespace: false
+  }
+, flushInterval: 10000
 }
