Don't reference variable not in spec
BOSH 2.0 prevents a job template to access a variable that is not
in its spec file. Here we copy the carbon variable to the statsd
spec file to deal with this case.

--- a/jobs/statsd/templates/config/config.js.erb
+++ b/jobs/statsd/templates/config/config.js.erb
@@ -99,7 +99,7 @@ Optional Variables:
 
 */
 {
-  graphitePort: <%= p('carbon.cache.line_receiver_port') %>
+  graphitePort: <%= p('statsd.carbon_cache_line_receiver_port') %>
 , graphiteHost: "127.0.0.1"
 , port: <%= p('statsd.port') %>
 , backends: [ "./backends/graphite" ]
